--- a/src/components/Form/form.module.css
+++ b/src/components/Form/form.module.css
@@ -107,4 +107,15 @@
     .temperaments__container{
         width: 70vw;
     }
+
+    .createBreed__form_error{
+        display: flex;
+        flex-direction: column;
+        border-radius: 0.4rem;
+        row-gap: 1rem;
+        background-color: var(--color-light);
+        box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.1);
+        padding: 2rem 2rem;
+        border: none
+    }
 }
